# ePaper-voice-assistant

./: .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml  test-stuff.py
.github/workflows/: tests.yml
config/: asound.conf  example_config.json  test_mic_settings_transcription.py
services/audio/: Dockerfile  audio_service.py  audio_service_wrapper.py  requirements.txt  speech_recognizer.py
services/google/: Dockerfile  google_service.py  google_service_wrapper.py  google_utils.py  requirements.txt
services/google/auth/: README.md
services/infoscreen/: Dockerfile  Dockerfile.refresh_service  clear_screen_on_shutdown.py  clear_screen_on_shutdown.sh  infoscreen_driver.py  infoscreen_helper.py  infoscreen_refresh_service.py  infoscreen_service.py  infoscreen_service_wrapper.py  requirements.txt  screensaver.py
services/infoscreen/driver/: epd7in3f.py  epd_7in3f_test.py  epdconfig.py
services/refresher/: Dockerfile  Dockerfile.refresh_service  refresher_service.py
services/voice_assistant/: Dockerfile  launch_voice_assistant.py  requirements.txt  voice_assistant.py
services/weather/: Dockerfile  requirements.txt  weather_service.py  weather_utils.py
tests/: requirements.txt
tests/google/: test_google_utils.py
tests/infoscreen/: test_infoscreen_helper.py
tests/weather/: test_weather_utils.py  weather_forecast_data.json
